# 1013-artnet-mapper

./: .gitignore
artnet-mapper-backend/: CMakeLists.txt  NOTES.md  render_doc.cap
artnet-mapper-backend/application/: CMakeLists.txt  application.cpp  config.hpp  runtime.cpp
artnet-mapper-backend/assets/2039-Niagara/: config.develop.json
artnet-mapper-backend/assets/shaders/: 2039-Niagara.frag  2039-Niagara.vert  full_screen_texture.frag  full_screen_texture.vert  mapping_shader.frag  mapping_shader.vert  my_shader.frag  my_shader.vert
artnet-mapper-backend/cmake/: boost.cmake  features.cmake  graphics.cmake  platform.cmake  toolchain.cmake
artnet-mapper-backend/config/: 2039-Niagara.default.json  2039-Niagara.develop.json  2039-Niagara.test.json
artnet-mapper-backend/internal/domain/: color.hpp  controls.hpp  display.hpp  installation.hpp  installation_summary.hpp
artnet-mapper-backend/internal/infrastructure/: CMakeLists.txt
artnet-mapper-backend/internal/infrastructure/art_net/: art_net.cpp  art_net.hpp  controller.cpp  controller.hpp  packet.hpp  universe.cpp  universe.hpp
artnet-mapper-backend/internal/infrastructure/asio/: context.hpp
artnet-mapper-backend/internal/infrastructure/controls/: CMakeLists.txt  controls.cpp  controls.hpp  input_controls.cpp  input_controls.hpp  iono_controls.cpp  iono_controls.hpp
artnet-mapper-backend/internal/infrastructure/graphics/: CMakeLists.txt  common.hpp  graphics.cpp  graphics.hpp
artnet-mapper-backend/internal/infrastructure/graphics/gl/: fbo.cpp  fbo.hpp  full_vao.cpp  full_vao.hpp  full_vbo.cpp  full_vbo.hpp  image_texture.cpp  image_texture.hpp  pixel_buffer.cpp  pixel_buffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp
artnet-mapper-backend/internal/infrastructure/graphics/renderer/: dummy.cpp  dummy.hpp  glfw_headless_renderer.cpp  glfw_headless_renderer.hpp  glfw_renderer.cpp  glfw_renderer.hpp  headless_renderer.cpp  headless_renderer.hpp  renderer.cpp  renderer.hpp
artnet-mapper-backend/internal/infrastructure/udp/: sender.cpp  sender.hpp
artnet-mapper-backend/internal/service/: CMakeLists.txt  service.cpp  service.hpp
artnet-mapper-backend/internal/utility/: buffers.hpp  clock.hpp  files.hpp  untyped_buffer.hpp
artnet-mapper-backend/management/openvpn/niagara-server.d/: niagara.conf
artnet-mapper-backend/packer/: 2039-Niagara.ans.yml  2039-Niagara.dhcpcd.conf  2039-Niagara.pkr.hcl  2039-Niagara.wpa_supplicant.conf
artnet-mapper-backend/system/: 2039-Niagara.boot_config.txt  2039-Niagara.service
artnet-mapper-backend/test/: CMakeLists.txt
artnet-mapper-backend/test/test_infrastructure/test_artnet/: test_artnet_controller.cpp
artnet-mapper-backend/test/test_infrastructure/test_udp/: test_udp_sender.cpp
artnet-mapper-generator/: main.py  setup.py
artnet-mapper-generator/1014_artnet_mapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
artnet-mapper-generator/assets/: 2039-Slate_Niagra_Bottling.py
artnet-mapper-generator/src/: bitmap.py  domain.py  generator.py  runtime.py
